# bosch_photo

./: CMakeLists.txt  README.md  manifest.xml  package.xml
include/photo/: photo.h  photo_camera.hpp  photo_camera_list.hpp  photo_class.hpp  photo_image.h  photo_image.hpp  photo_reporter.hpp
src/: CMakeLists.txt
src/libphoto/: CMakeLists.txt  photo.cpp  photo_capture.cpp  photo_class.cpp  photo_config.cpp  photo_image.cpp
src/libphoto2/: CMakeLists.txt  photo_camera.cpp  photo_camera_list.cpp  photo_image.cpp  photo_reporter.cpp
src/photo_node/: CMakeLists.txt  photo_node.cpp
src/test_photo/: CMakeLists.txt  test_photo.cpp
srv/: Capture.srv  GetConfig.srv  SetConfig.srv
